tests/typechecking/invalid/if1.ml
if 5=9 then
9
else
print_int(5)
